--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </section><!-- End Why Us Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills">
+    <!--<section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -281,7 +281,7 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section>--><!-- End Skills Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
@@ -598,7 +598,7 @@
     </section>
 
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <!--<section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
         <div class="row">
@@ -612,7 +612,7 @@
         </div>
 
       </div>
-    </section><!-- End Cta Section -->
+    </section>--><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <!--<section id="portfolio" class="portfolio">
@@ -1055,7 +1055,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!--<div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -1064,7 +1064,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div>-->
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
@@ -1091,7 +1091,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/SAFETY SPHERE PRO-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!--Designed by <a href="https://bootstrapmade.com/"></a>-->
       </div>
     </div>
   </footer><!-- End Footer -->
