--- a/index.html
+++ b/index.html
@@ -252,6 +252,36 @@
       </div>
     </section><!-- End Why Us Section -->
 
+    <section id="Solution" class="solution">
+      <div class="container" data-aos="zoom-in">
+        <div class="row">
+          <div class="section-title">
+            <h2>Our Products</h2>
+          </div>
+        </div>
+        <div class="row">
+          <!-- Left Side (Image) -->
+          <div class="col-md-6">
+            <h3>Helmets with airbag Features</h3>
+            <img src="assets/img/hel1.jpg" class="img-fluid" alt="Image">
+            <p> - Air-bag upto waist</p>
+            <p> - Bluetooth for calling</p>
+            <p>- Ignition sensor</p>
+          </div>
+          <!-- Right Side (Text) -->
+          <div class="col-md-6">
+            <h3>Helmets with airbag and GPS tracke Features</h3>
+            <img src="assets/img/HE2.jpg" class="img-fluid" alt="Image">
+            <p> - Air-bag upto waist</p>
+            <p> - GPS tracker</p>
+            <p> - Emergency alert and location notification to predefined contacts</p>
+            <p> - Bluetooth for calling</p>
+            <p> - Ignition sensor</p>.</p>
+          </div>
+      </div>
+      </div>
+    </section>
+
     <!-- ======= Skills Section ======= -->
     <!--<section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
@@ -291,14 +321,10 @@
           <h2>Problem/Opportunity</h2>
           <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
-
+<!--
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">CONTEXT</a></h4>
-              <p>When accident occurs the normal helmet which is easily available in market only protects head and not the main organs up to waist. The problem occurs when rider do not wear helmet.</p>
-            </div>
+            
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
@@ -310,13 +336,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">ALTERNATIVE</a></h4>
-              <p>Currently the customers using</p>
-              <p>  1. The normal helmets which protects head portion</p>
-              <p>  2. The two wheelers with airbag</p>
-            </div>
+            
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
@@ -326,14 +346,16 @@
               <p>In India, approximately 21 crore people who are the users of two wheelers so eventually all the people who drives two wheelers and pillions.</p>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="row">
           <div class="col-lg-4 mt-4 mt-lg-0 align-items-stretch d-flex" data-aos="zoom-in" data-aos-delay="500">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">EMOTIONAL IMPACT</a></h4>
-              <p>First and foremost, it puts one's life at risk, causing anxiety and fear for both the individual and their loved ones. The constant worry about accidents and potential  injuries like spinal cord injuries, ribcage injuries and cervical injuries can lead to heightened stress and emotional distress. In the event of an accident, the emotional toll can be overwhelming. Survivors may experience guilt for not taking proper driving precautions leading to self-blame and regret.</p>
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <h4><a href="">ALTERNATIVE</a></h4>
+              <p>Currently the customers using</p>
+              <p>  1. The normal helmets which protects head portion</p>
+              <p>  2. The two wheelers with airbag</p>
             </div>
           </div>
 
@@ -946,12 +968,12 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
 
         <div class="row">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <!--<div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -974,9 +996,9 @@
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
-          </div>
+          </div>-->
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div class="col-md-12 mt-5 mt-lg-0 d-flex align-items-stretch align-items-center justify-content-center">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -1036,11 +1058,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>SAFETY SPHERE PRO</h3>
             <p>
-              A108 Adam Street <br>
-              Gandhinagar, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              63, krishnakunj, sahkar colony <br>
+              sector 25 gandhinagar<br>
+              India <br><br>
+              <strong>Phone:</strong> +91 7359243326<br>
+              <strong>Email:</strong> safetyspherepro@gmail.com<br>
             </p>
           </div>
 
