Done and dusted

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <section id="Result" class="Result">
+   <!-- <section id="Result" class="Result">
       <div class="container" data-aos="zoom-in">
 
         <div class="row">
@@ -408,8 +408,8 @@
         </div>
 
       </div>
-    </section>
-
+    </section>-->
+<!--
     <section id="response" class="response">
       <div class="container" data-aos="zoom-in">
 
@@ -472,7 +472,8 @@
         </div>
 
       </div>
-    </section>
+    </section>-->
+    <!--
 
     <section id="estimation" class="estimation">
       <div class="container" data-aos="zoom-in">
@@ -483,11 +484,10 @@
           </div>
         </div>
         <div class="row">
-          <!-- Left Side (Image) -->
+        
           <div class="col-md-4">
               <img src="assets/img/estimate.png" class="img-fluid" alt="Image">
           </div>
-          <!-- Right Side (Text) -->
           <div class="col-md-8">
               <h2>Total Addressable Market</h2>
               <p>
@@ -500,7 +500,7 @@
           </div>
       </div>
       </div>
-    </section>
+    </section>-->
 
     <!--<section id="customer" class="customer">
       <div class="container" data-aos="zoom-in">
@@ -578,7 +578,7 @@
       </div>
     </div>
     </section>-->
-
+<!--
     <section id="customer" class="customer">
       <div class="container" data-aos="zoom-in">
         <div class="row">
@@ -590,9 +590,9 @@
           <img src="assets/img/customersss.png" class="img-fluid mb-3" alt="Image 1">
         </div>
       </div>
-    </section>
+    </section>-->
 
-
+<!--
     <section id="proposition" class="proposition">
       <div class="container" data-aos="zoom-in">
         <div class="row">
@@ -604,8 +604,8 @@
           <img src="assets/img/preposition.png" class="img-fluid mb-3" alt="Image 1">
         </div>
       </div>
-    </section>
-
+    </section>-->
+<!--
     <section id="Solution" class="solution">
       <div class="container" data-aos="zoom-in">
         <div class="row">
@@ -617,7 +617,7 @@
           <img src="assets/img/solution.png" class="img-fluid mb-3" alt="Image 1">
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- ======= Cta Section ======= -->
     <!--<section id="cta" class="cta">
