--- a/index.html
+++ b/index.html
@@ -261,17 +261,25 @@
         </div>
         <div class="row">
           <!-- Left Side (Image) -->
-          <div class="col-md-6">
+          <div class="col-md-6 offset-md-3 text-center">
+            <img src="assets/img/HE2.jpg" class="img-fluid" alt="Image">
+          </div>
+        </div>
+<br/>
+<br/>
+        <div class="row">
+          <!-- Left Side (Image) -->
+          <div class="col-md-6 text-center">
             <h3>Helmets with airbag Features</h3>
-            <img src="assets/img/hel1.jpg" class="img-fluid" alt="Image">
+            
             <p> - Air-bag upto waist</p>
             <p> - Bluetooth for calling</p>
             <p>- Ignition sensor</p>
           </div>
           <!-- Right Side (Text) -->
-          <div class="col-md-6">
+          <div class="col-md-6 text-center">
             <h3>Helmets with airbag and GPS tracke Features</h3>
-            <img src="assets/img/HE2.jpg" class="img-fluid" alt="Image">
+            
             <p> - Air-bag upto waist</p>
             <p> - GPS tracker</p>
             <p> - Emergency alert and location notification to predefined contacts</p>
