--- a/index.html
+++ b/index.html
@@ -329,10 +329,14 @@
           <h2>Problem/Opportunity</h2>
           <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
-<!--
+
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">CONTEXT</a></h4>
+              <p>When accident occurs the normal helmet which is easily available in market only protects head and not the main organs up to waist. The problem occurs when rider do not wear helmet</p>
+            </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
@@ -344,7 +348,11 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-            
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">EMOTIONAL IMPACT</a></h4>
+              <p>First and foremost, it puts one's life at risk, causing anxiety and fear for both the individual and their loved ones. The constant worry about accidents and potential  injuries like spinal cord injuries, ribcage injuries and cervical injuries can lead to heightened stress and emotional distress. In the event of an accident, the emotional toll can be overwhelming. Survivors may experience guilt for not taking proper driving precautions leading to self-blame and regret.</p>
+            </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
@@ -354,9 +362,9 @@
               <p>In India, approximately 21 crore people who are the users of two wheelers so eventually all the people who drives two wheelers and pillions.</p>
             </div>
           </div>
-        </div>-->
+        </div>
 
-        <div class="row">
+       <!-- <div class="row">
           <div class="col-lg-4 mt-4 mt-lg-0 align-items-stretch d-flex" data-aos="zoom-in" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
@@ -383,7 +391,7 @@
               <p>  2. Air bag in two wheeler is not perfectly reliable as it opens from steering section only, which will only protect one if the collision occur from front.</p>
             </div>
           </div>
-        </div>
+        </div>-->
 
       </div>
     </section><!-- End Services Section -->
